--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,11 @@
             <artifactId>javax.el</artifactId>
             <version>3.0.1-b08</version>
         </dependency>
+        <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>failsafe</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 
     <repositories>
